# P2548

./: CMakeLists.txt  Readme.md
inc/: copyable_function.hpp  function.hpp  function_ref.hpp
test/: conversions.cpp  copyable_function.cpp  function.cpp  function_ref.cpp
